# marcus_chiri_thesis

./: .gitignore  pyproject.toml  todo.md
app/: scopus_results_2 - Copy.db
app/extract_papers/: analyses_abstracts.py  retrieves_abstracts.py  search_basic_info.py
playground/: demo.py  query.txt  search_w_pybliometrics.py  search_w_scopus_api.py  test.py  writes_csv.py
resources/: promt.txt  screening_promt.txt
