[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.5",
    "pydantic-ai>=0.2.11",
    "pypdf2>=3.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "tiktoken>=0.9.0",
]
